fixed the last image

--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
 
         <h1>products</h1>
         <div>
-            <img src="images/liggendesmeg.jpg" alt="red smeg toaster">
+            <img src="images/liggendesmeg2.jpg" alt="red smeg toaster">
             <p class="bold">Smeg</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eligendi doloremque animi natus voluptate cum sequi. Totam animi repellat voluptatum soluta nam quas commodi ullam esse eligendi in! Vitae, expedita?</p>
         </div>
