--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home decor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-    <img src="images/bluelogo.jpg" alt="home logo of a sofa" class="logo">
+        <a href="index.html"><img src="images/bluelogo.jpg" alt="home logo of a orange sofa" class="logo"></a>
+    
 
         <nav>
             <ul>
@@ -29,7 +39,7 @@
     <footer>
         copyright&copy;
         <img src="images/footericon.png" alt="my own made youtube icon">
-        <img class="icon" src="images/footericon2.png" alt="">
+        <img class="icon" src="images/footericon2.png" alt="my own made facebook icon">
     </footer>
     
 </body>
